# OpenGL

./: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: main.cpp
src/include/: camera.h  shader.h
src/lib/: shader.cpp
src/shaders/default/: default.frag  default.vert
src/shaders/light/: lighting.frag
